# knot

./: .gitignore  knot.toml  pyproject.toml
knot/: __init__.py  __main__.py  configs.py
knot/generators/: base.py  make_model.py  startapp.py
knot/templates/model_model/: model.jinja
knot/templates/startapp/: apps.py.jinja  urls.py.jinja
knot/utils/: __init__.py
test/: knot.toml  test.py
