[tool.poetry]
name = "knot"
version = "0.1.0"
description = ""
authors = ["keinagae"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.3"
fire = "^0.4.0"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
